testsuite/tests/builtins/str_methods/substring/non_int_high/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.substring(1, "Not an int"))
   │       ──────────────┬─────────────  
   │                     ╰─────────────── Expecting a "Int" for the parameter "high", got a "Str"
───╯
